# Malak-Browser

./: CMakeLists.txt
.github/workflows/: build_macos.yml  windows_build.yml
assets/: blocklist.json  style.qss
src/: adblock.cpp  interceptor.cpp  interceptor.h  main.cpp  mainwindow.cpp  mainwindow.h  storage.cpp  storage.h
src/common/: adblock.cpp  adblock.h  storage.cpp  storage.h
src/linux/: browser.cpp  browser.h  main.cpp
src/windows/: browser.cpp  browser.h  main.cpp
